--- a/das12.css
+++ b/das12.css
@@ -12,30 +12,69 @@ body {
 .header h1 {
   color: white;
   font-size: 50px;
+  animation: fadeIn 2s ease-in-out;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateX(-70px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .header p {
   color: white;
   font-size: larger;
   margin-bottom: 70px;
+  animation: fadeRight 2s ease-in-out;
 }
+
+@keyframes fadeRight {
+  from {
+    opacity: 0;
+    transform: translateX(70px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .headbutton {
   background-color: rgb(232, 126, 126);
   border-radius: 8px;
   color: white;
-  padding: 10px 40px;
+  padding: 15px 40px;
   border: none;
   box-shadow: 0px 4px rgb(41, 40, 40);
+  margin-bottom: 100px;
   font-weight: 800;
 }
-.headbutton:hover {
-  box-shadow: none;
+
+button:hover {
+  animation: buttonScale 0.2s ease forwards;
 }
+
+@keyframes buttonScale {
+  to {
+    translate: 1px 3px;
+    box-shadow: none;
+  }
+}
+
 .main {
   display: flex;
-  margin-top: 100px;
+
   border-radius: 8px;
-  gap: 20px;
+  gap: 30px;
+  width: fit-content;
+  margin: auto;
 }
+
 .main-container {
   background-color: white;
   display: flex;
@@ -45,6 +84,42 @@ body {
   padding: 50px;
   border-radius: 8px;
   max-width: auto;
+  animation: fadeUp 0.8s ease-in-out forwards;
+}
+
+.main-container2 {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 50px;
+  border-radius: 8px;
+  max-width: auto;
+  animation: fadeUp 0.8s 0.3s ease-in-out forwards;
+}
+
+.main-container3 {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 50px;
+  border-radius: 8px;
+  max-width: auto;
+  animation: fadeUp 0.8s 0.5s ease-in-out forwards;
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 .mainbutton {
   background-color: aquamarine;
@@ -52,8 +127,9 @@ body {
   box-shadow: 0px 3px rgb(41, 40, 40);
   border: none;
   color: white;
-  padding: 10px 40px;
+  padding: 15px 40px;
   margin-top: 50px;
+  font-weight: 800;
 }
 .mainbutton:hover {
   box-shadow: none;
@@ -66,12 +142,13 @@ body {
   margin: 60px;
 }
 .footerbutton {
-  padding: 10px 40px;
+  padding: 15px 40px;
   background-color: white;
   color: rgb(110, 11, 232);
   border: none;
   border-radius: 8px;
   box-shadow: 0px 3px black;
+  font-weight: 800;
 }
 .footer h3 {
   color: white;
@@ -80,30 +157,20 @@ body {
   animation: emoji1 2s infinite;
   font-size: 40px;
 }
+
 @keyframes emoji1 {
-  0% {
-    background-color: #fff;
-    left: 0px;
-    top: 0px;
-  }
-  25% {
-    background-color: #804646;
-    left: 200px;
-    top: 0px;
-  }
-  50% {
-    background-color: #183348;
-    left: 200px;
-    top: 200px;
-  }
-  75% {
-    background-color: #9e6b88;
-    left: 0px;
-    top: 200px;
-  }
+  0%,
+  20%,
+  50%,
+  80%,
   100% {
-    background-color: #c74545;
-    left: 0px;
-    top: 0px;
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
   }
 }
